# AAItrade

./: .env.example  .gitignore  CLAUDE.md  README.md  TRADING_GUIDE.md  pyproject.toml
aaitrade/: __init__.py  __main__.py  claude_client.py  config.py  context_builder.py  db.py  executor.py  holidays.py  main.py  multi_session.py  portfolio_sync.py  price_monitor.py  reporter.py  server.py  session_manager.py  summarizer.py  telegram_bot.py
aaitrade/tools/: __init__.py  fiidii.py  fundamentals.py  journal.py  market.py  memory.py  news.py  portfolio_tools.py  price_alerts.py  search.py  session_analysis.py  session_memory.py  stock_thesis.py  trading.py  watchlist_tools.py
api/: __init__.py  database.py  main.py  requirements.txt  tunnel.sh
api/routers/: control.py  decisions.py  journal.py  portfolio.py  (+4 more)
config/: multi_session.yaml  watchlist_seed.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
deploy/: aaitrade.service  com.aaitrade.server.plist  com.aaitrade.tunnel.plist  deploy.sh  setup.sh  setup_macos.sh  setup_tunnel_macos.sh
docs/: 00-overview.md  01-execution-philosophy.md  02-architecture.md  03-open-questions.md  04-risk-rules.md  05-tools-and-expandability.md  06-information-and-memory.md  07-system-prompt.md
scripts/: export_session.py  refresh_token.py  start_server.sh  stop_server.sh
tests/: conftest.py  test_claude_client.py  test_context_builder.py  test_db.py  test_drawdown_and_cash.py  test_executor.py  test_holidays.py  test_integration.py  test_tools_individual.py  test_tools_registry.py
(+17 files in other folders)
